<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:checkedButton="@id/radio_button_car"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_car" />

        <RadioButton
            android:id="@+id/radio_button_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_walking" />

    </RadioGroup>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/step_of_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_route_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:text="Парки" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start_route"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:text="@string/start"
                app:icon="@drawable/ic_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steps_of_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/move_from"

                android:textAppearance="?android:textAppearanceListItem"
                android:textColor="@color/material_on_background_emphasis_medium"/>

            <TextView
                android:id="@+id/textView_start_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="Парки" />

            <TextView
                android:id="@+id/textView_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/move_to"

                android:textAppearance="?android:textAppearanceListItem"
                android:textColor="@color/material_on_background_emphasis_medium"/>

            <TextView
                android:id="@+id/textView_end_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="Парки" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
